fix(kanban): list width on Safari

--- a/projects/kanban/src/app/board/shared/list/list.component.scss
+++ b/projects/kanban/src/app/board/shared/list/list.component.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   flex: 0 0 $list-width;
-  width: 100%;
+  width: $list-width;
   max-height: 100%;
   border: 1px solid var(--color-quinary);
   background-color: var(--color-septenary);
